# rs-battery-percent

./: Cargo.toml  README.md  rs-battery-percent  run.sh  sample.json
src/: lib.rs  main.rs
