[package]
name = "rs-battery-percent"
version = "0.1.0"
edition = "2024"

[dependencies.starship-battery]
version = "0.10.1"
default-features = false
features = []

[dependencies.serde]
version = "1.0.219"
default-features = false
features = [
	"std",
	"derive",
]

[dependencies.serde_json]
version = "1.0.140"
default-features = false
features = [
	"std",
]
